--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@ Contact us: +91 9432584609 , +91 8240910503>
 email: njtstrucdesign1@gmail.com , njtstrucdesign2@gmail.com <br>
 Bank account details: STATE BANK OF INDIA <br>
 CIF No. : 85912177696 <br>
-ACCOUNT No.:444977XXXXX <br>
-Name : TAPASI SENGUPTA (VOLUNTARY STRUCTURAL DESIGN ENGINEER).<br></a>
+ACCOUNT No.:44497736988 <br>
+Name : TAPASI SENGUPTA (STRUCTURAL DESIGN ENGINEER).<br></a>
 
 
 </head>
 <body style="background-Color:SkyBlue">
 <h2 style="background-Color:Lavender;font-size:43px;Text-allign:Centre;">NJT STRUCTURAL DESIGN ENGINEERING FORUM (India)</h2>
-<h2 style="background-Color:Lavender;font-size:19px;Text-allign:Centre;">FORUM:MS TAPASI SENGUPTA AND FRIENDS (7 YEARS OF EXPERIENCE IN THE STRUCTURAL DESIGN AND DRAWING IN STAAD PRO CONNECT EDITION , STAAD PRO V8i , AUTOCAD AND SOLIDWORKS 2020.)</h2>
+<h2 style="background-Color:Lavender;font-size:19px;Text-allign:Centre;">FORUM:MS TAPASI SENGUPTA AND FRIENDS (7 YEARS OF EXPERIENCE IN THE STRUCTURAL ENGINEERING DESIGN AND DRAWING WITH THE: STAAD PRO CONNECT EDITION , STAAD PRO V8i , AUTOCAD AND SOLIDWORKS 2020.)</h2>
 <a style="background-Color:Lavender;font-size:25px;Text-allign:Centre;"><b> i) Inspiration of us : "The Life Story of <b><i> A)PM MODI B)JAY SHAH,THE ICC CHAIRMAN FOR THE YEAR 2025 C)MRS.MAMATA BANERJEE(CM:WEST BENGAL.) & NITA AMBANI,THE OWNER OF THE MUMBAI INDIANS,<br>FOUNDER AND CHAIRPERSON OF THE INDIAN SUPER LEAGUE AND ONE OF THE GREATEST INDUSTRIALIST FROM INDIA IN THE STRUCTURAL WORLD.:" </i><b><br></a>
 
 <a style="background-Color:Orange;font-size:25px;Text-allign:Centre;">
@@ -35,7 +35,7 @@ v) Contact us :</a>
 width="1322" height="625">
 
 <h2 style="background-Color:Orange;font-size:25px;Text-allign:Centre;">ii) About us:</h2>
-<p style="background-Color:Lavender;font-size:19px;Text-allign:Centre;"> MS TAPASI SENGUPTA: Voluntary Design Engineer (A FORUM MEMBER) (B.Tech in Mechanical Engineering (through JELET for the Academic Session 2014:15) from the Camellia Institute of Technology (Madhyamgram, Kolkata) in the year of 2017 under Maulana Abul Kalam Azad University of Technology (MAKAUT) formerely known as West Bengal University of Technology (WBUT) and AICTE. From October 2018 to till date engaged in the Structural Engineering Design and Drawing with STAAD PRO CONNECT EDITION, AUTOCAD,SOLIDWORKS and manually, Comprising of many successfull Projects (34 Nos) incluiding Conveyor System, Control Room, GI/Zinc Alum Tank incluiding 16m high Steel super structure, Bagfilter fabrication drawing and  Solar Module Mounting Structural Design, Drawing).)</p>
+<p style="background-Color:Lavender;font-size:19px;Text-allign:Centre;"> MS TAPASI SENGUPTA: Structural Design Engineer (FORUM LEADER) (B.Tech in Mechanical Engineering (through JELET for the Academic Session 2014 TO 2017) from the Camellia Institute of Technology (Madhyamgram, Kolkata) in the year of 2017 under Maulana Abul Kalam Azad University of Technology (MAKAUT) formerely known as West Bengal University of Technology (WBUT) and AICTE. From October 2018 to till date engaged in the Structural Engineering Design and Drawing with the STAAD PRO CONNECT EDITION, AUTOCAD,SOLIDWORKS and manually, Comprising of many successfull Projects (34 Nos) incluiding Conveyor System, Control Room, GI/Zinc Alum Tank incluiding 16m high Steel super structure, Bagfilter fabrication drawing and  Solar Module Mounting Structural Design, Drawing).)</p>
 
 <p style="background-Color:Lavender;font-size:25px;Text-allign:Centre;">We are the Structural Design Engineering Forum comprising of the <I>World Class Leaders</I> and experienced Graduate,Post-<br> Graduate, Doctorate<B> : Structural, Mechanical, Electrical Engineer</B>, Mathematician, Physicist, English Expert, MBA and<br> <B>around 40 Years experienced Industry professionals in Structural, Mechanical and Electrical Engineering ,<B> from the<br> <B>IIT-BHU, JADAVPUR UNIVERSITY , DURGAPUR R.E.COLLEGE, MAKAUT FORMERELY KNOWN AS WBUT, <br>CALCUTTA UNIVERSITY, MUMBAI UNIVERSITY , SHIBPUR B.E COLLEGE AND MORE.</B></I></p>
 
