--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ Contact us: +91 9432584609 , +91 8240910503>
 email: njtstrucdesign1@gmail.com , njtstrucdesign2@gmail.com <br>
 Bank account details: STATE BANK OF INDIA <br>
 CIF No. : 85912177696 <br>
-ACCOUNT No.:44497736988 <br>
+ACCOUNT No.:444977XXXXX <br>
 Name : TAPASI SENGUPTA (STRUCTURAL DESIGN ENGINEER).<br></a>
 
 
